Cha 3.1 - added in basic bullet physics components and fixed linking issues to support 2013.

--- a/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
+++ b/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="FreeGLUTCallbacks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BasicDemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BulletOpenGLApplication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BasicDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
