--- a/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
+++ b/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="DebugDrawer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionFilteringDemo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DebugDrawer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionFilteringDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
