--- a/TestingBulletPhysics/TestingBulletPhysics.vcxproj
+++ b/TestingBulletPhysics/TestingBulletPhysics.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="TestingBulletPhysics.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\README.md" />
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
