--- a/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
+++ b/TestingBulletPhysics/TestingBulletPhysics.vcxproj.filters
@@ -77,5 +77,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
